--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ body {
     background-color: #E4D4D4;
 }
 
+a {
+    text-decoration: none;
+}
+
 .header {
     border: solid;
     display: flex;
@@ -19,6 +23,8 @@ body {
 .name {
     border: solid;
     align-items: center;
+    color: black;
+    text-decoration: none;
 }
 
 .navbar {
@@ -59,10 +65,9 @@ body {
 }
 
 .projectDiv {
-    text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .project {
@@ -81,14 +86,8 @@ body {
 }
 
 .quizScreen {
+    display: flex;
     padding-bottom: 30px;
-    align-content: center;
-    justify-content: center;
-    background: #E4D4D4;
-    border-color: #E4D4D4;
-}
-
-.quizScreen2 {
     align-content: center;
     justify-content: center;
     background: #E4D4D4;
@@ -104,12 +103,38 @@ body {
     padding-bottom: 10px;
 }
 
-.quizApp1 {
-    height: 200px;
-    width: 200px;
+.contact {
+    font-family: 'Rationale';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding-top: 15px;
+}
+
+.contactInfo {
+    text-align: center;
+    padding: 5px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
     background: #C4C4C4;
+    border: 1px solid #000000;
+    box-sizing: border-box;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.9);
-    border-radius: 70px;
+    border-radius: 20px;
+    margin-bottom: 30px;
+    list-style: none;
+}
+
+.contactlist {
+    font-family: 'Rationale';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
 }
 
 .aboutMe {
@@ -221,9 +246,14 @@ body {
     display: none;
 }
 
+.modaltitle {
+    display: flex;
+    align-items: center;
+}
+
 .screenshotmodal {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 80%;
+    max-height: 80%;
     margin-left: 5%;
     margin-right: 5%;
     border: solid;
@@ -250,8 +280,9 @@ body {
     background-color: #D12A2A;
     font-family: 'Rationale';
     font-size: 16px;
-    width: 500px;
-    height: 300px;
+    width: 75%;
+    height: 75%;
+    margin: 20% auto;
     border-radius: 5px;
     position: relative;
     overflow: auto;
@@ -267,37 +298,46 @@ body {
 }
 
 @media screen and (min-width: 700px) {
+    .name {
+        display: flex;
+        border: solid;
+        margin-left: 20px;
+    }
     .navbar {
         display: flex;
         align-items: flex-end;
+        justify-content: flex-end;
     }
     .menu {
+        display: flex;
         font-family: 'Rationale';
         list-style-type: none;
         justify-content: space-evenly;
     }
     .navButtons {
         font-family: 'Rationale';
-        flex-direction: row;
         border: solid;
-        text-align: center;
-        list-style-type: none;
+        border-radius: 10px;
+        background-color: #C4C4C4;
         color: black;
-        background: #D12A2A;
-        justify-content: center;
-        width: 86px;
-        height: 17px;
-        left: 801px;
-        top: 90px;
+        width: 100px;
+        text-align: center;
+        margin-left: 10px;
     }
     .projectDiv {
         display: flex;
         flex-direction: row;
+        margin-bottom: 45px;
+    }
+    .quizScreen {
+        height: 350px;
+        width: 350px;
+    }
+    .quizApp {
+        height: 350px;
+        width: 350px;
     }
     .quizScreen:hover {
-        cursor: pointer;
-    }
-    .quizScreen2:hover {
         cursor: pointer;
     }
     main {
@@ -341,5 +381,16 @@ body {
         display: flex;
         justify-content: left;
         align-items: flex-start
+    }
+    .modal-content {
+        background-color: #D12A2A;
+        font-family: 'Rationale';
+        font-size: 16px;
+        width: 50%;
+        height: 50%;
+        margin: 20% auto;
+        border-radius: 5px;
+        position: relative;
+        overflow: auto;
     }
 }
