--- a/css/style.css
+++ b/css/style.css
@@ -69,12 +69,21 @@ a {
 }
 
 .projectDiv {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    background: #C4C4C4;
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.9);
+    border-radius: 20px;
+    padding: 10px;
 }
 
 .project {
+    align-content: center;
+}
+
+.screenshotSection {
+    display: flex;
+    justify-content: center;
     align-content: center;
 }
 
@@ -119,7 +128,7 @@ a {
 
 .contactInfo {
     text-align: center;
-    padding: 5px;
+    padding: 10px;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
@@ -149,14 +158,14 @@ a {
     line-height: 28px;
     text-align: center;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
-    padding-top: 15px;
+    padding-top: 30px;
 }
 
 .bio {
-    text-align: center;
+    text-align: left;
     line-height: 2em;
     font-family: 'Special Elite', cursive;
-    padding: 5px;
+    padding: 10px;
     font-size: 14px;
     background: #C4C4C4;
     border: 1px solid #000000;
@@ -300,6 +309,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    line-height: 1.5em;
 }
 
 .modalLink {
@@ -312,7 +322,7 @@ a {
 
 .quizDesciption {
     font-family: 'Special Elite', cursive;
-    line-height: 1.5em;
+    line-height: 2em;
 }
 
 .quizTechnologies {
@@ -358,13 +368,26 @@ a {
         margin-left: 10px;
     }
     .projectDiv {
-        display: flex;
-        flex-direction: row;
-        margin-bottom: 45px;
+        background: #C4C4C4;
+        border: 1px solid #000000;
+        box-sizing: border-box;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.9);
+        border-radius: 20px;
+        padding: 10px;
     }
     .quizScreen {
         height: 350px;
         width: 350px;
+    }
+    .aboutMe {
+        font-family: 'Vast Shadow', cursive;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 24px;
+        line-height: 28px;
+        text-align: center;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
+        padding-top: 30px;
     }
     .quizApp {
         height: 350px;
@@ -395,6 +418,19 @@ a {
         justify-content: center;
         color: #000000;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.9);
+    }
+    .bio {
+        text-align: left;
+        line-height: 2em;
+        font-family: 'Special Elite', cursive;
+        padding: 5px;
+        font-size: 14px;
+        background: #C4C4C4;
+        border: 1px solid #000000;
+        box-sizing: border-box;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.9);
+        border-radius: 20px;
+        margin-bottom: 30px;
     }
     .modaltitle {
         display: flex;
