--- a/css/style.css
+++ b/css/style.css
@@ -338,7 +338,7 @@ a {
     cursor: pointer;
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width:400px) and (min-width:900px) {
     a {
         text-decoration: none;
         color: black;
