--- a/css/style.css
+++ b/css/style.css
@@ -402,8 +402,8 @@ a {
         display: none;
     }
     .copyright2 {
-        font-family: 'Special Elite', cursive;
-        font-size: 22px;
+        font-family: 'Vast Shadow', cursive;
+        font-size: 20px;
         display: flex;
         justify-content: center;
         color: #000000;
