--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #D12A2A;
+    background-color: #E61E1E;
     width: 100%;
     height: 100px;
     left: 0px;
@@ -180,7 +180,7 @@ a {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background: #D12A2A;
+    background: #E61E1E;
     border-radius: 20px;
     border: solid;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.9);
@@ -192,8 +192,8 @@ a {
 
 .button1 {
     align-content: center;
-    background: #D12A2A;
-    border-color: #D12A2A;
+    background: #E61E1E;
+    border-color: #E61E1E;
 }
 
 .button1:hover {
@@ -202,8 +202,8 @@ a {
 
 .button2 {
     align-content: center;
-    background: #D12A2A;
-    border-color: #D12A2A;
+    background: #E61E1E;
+    border-color: #E61E1E;
 }
 
 .button2:hover {
@@ -212,8 +212,8 @@ a {
 
 .button3 {
     align-content: center;
-    background: #D12A2A;
-    border-color: #D12A2A;
+    background: #E61E1E;
+    border-color: #E61E1E;
 }
 
 .button3:hover {
@@ -279,7 +279,7 @@ a {
 }
 
 .modal-content {
-    background-color: #D12A2A;
+    background-color: #E61E1E;
     font-size: 16px;
     width: 75%;
     height: 75%;
@@ -428,7 +428,7 @@ a {
         align-content: center;
     }
     .modal-content {
-        background-color: #D12A2A;
+        background-color: #E61E1E;
         font-size: 16px;
         width: 75%;
         height: 75%;
